# Relationship-Calculator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs  models.rs
src/data/: mod.rs  relations.rs  titles.rs
src/engine/: calculator.rs  formatter.rs  mod.rs  resolver.rs
tests/: calculator_tests.rs
